<resources>
    <string name="app_name">DA106G2_Main</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="live">直播</string>
    <string name="diary">日誌</string>
    <string name="mall">商城</string>
    <string name="camp">露營</string>
    <string name="member">會員中心</string>
    <string name="title">Camping Man</string>
    <string name="login">登入</string>
    <string name="logout">登出</string>
    <string name="registration">註冊</string>
    <string name="user_account">帳號</string>
    <string name="user_password">密碼</string>
    <string name="err_account_password">帳號密碼錯誤</string>
    <string name="not_connected">未連線</string>
    <string name="no_data">沒有資料</string>
    <string name="search">搜尋</string>
    <string name="shopping_cart">購物車</string>
    <string name="add_symbol">+</string>
    <string name="less_symbol">-</string>
    <string name="quantity">數量</string>
    <string name="add_to_shopping_cart">加入購物車</string>
    <string name="resale_shop_to_continue_shopping">回賣場繼續購物</string>
    <string name="checkout">結帳</string>
    <string name="delete">刪除</string>
    <string name="total_amount_">總金額：</string>
    <string name="please_enter_the_address">請輸入地址：</string>
    <string name="check_order">查訂單</string>
    <string name="currently_reserved_">目前已訂位：</string>
    <string name="booking_id_">訂位編號：</string>
    <string name="start_date_">開始時間：</string>
    <string name="end_time_">結束時間：</string>
    <string name="booking_status_">訂位狀態：</string>
    <string name="person_in_charge_">負責人員：</string>
    <string name="credit_balance_">點數餘額：</string>
    <string name="please_choose_a_payment_method_">請選擇付款方式：</string>
    <string name="credit_payment">點數付款</string>
    <string name="credit_card_payment">信用卡付款</string>
    <string name="please_enter_credit_card_number_">請輸入信用卡號碼：</string>
    <string name="month">月</string>
    <string name="year">年</string>
</resources>
