<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.da106g2_main.mall.ShoopingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnShoopingToShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/shopping_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgViewShooping"
                    android:layout_width="match_parent"
                    android:layout_height="500dp"
                    android:layout_margin="4dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/testp2" />

                <TextView
                    android:id="@+id/tvCommodityTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="開頭"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvShoopingCommodityPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:maxHeight="25sp"
                    android:text="TextView"
                    android:textColor="@color/design_default_color_error"
                    android:textSize="18sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="@string/quantity"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvCommodityCounter"
                        android:layout_width="64sp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="0"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btnCommodityLess"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnCommodityLess"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="@string/less_symbol"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView6"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnCommodityAdd"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:text="@string/add_symbol"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvCommodityCounter"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btnAddShoppingCart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_to_shopping_cart" />

                <TextView
                    android:id="@+id/tvCommodityMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="商品內容"
                    android:textSize="18sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/QARecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:minHeight="300dp" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
