<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:id="@+id/imgViewCart"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/testp2" />

        <TextView
            android:id="@+id/tvCartCommodityTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="商品名稱"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgViewCart"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCartCommodityPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="價格"
            android:textColor="@color/design_default_color_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgViewCart"
            app:layout_constraintTop_toBottomOf="@+id/tvCartCommodityTitle" />

        <Button
            android:id="@+id/btnCartDelete"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnCartCommodityAdd"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:text="@string/add_symbol"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvCartCounter"
            app:layout_constraintTop_toBottomOf="@+id/imgViewCart" />

        <Button
            android:id="@+id/btnCartCommodityLess"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:text="@string/less_symbol"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgViewCart" />

        <TextView
            android:id="@+id/tvCartCounter"
            android:layout_width="84sp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:maxLength="6"
            android:text="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCartCommodityLess"
            app:layout_constraintTop_toBottomOf="@+id/imgViewCart" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>